--- a/main.css
+++ b/main.css
@@ -41,6 +41,9 @@
     }
 }
 @media screen and (max-width:450px){
+    .main-top{
+        background-image: url(./image/messi2.jpg);
+    }
     .main-top1{
         display: flex;
         flex-direction: column;
@@ -55,6 +58,9 @@
     }
 }
 @media screen and (max-width:400px){
+    .main-top{
+        background-image: url(./image/messi2.jpg);
+    }
     .main-top1{
         display: flex;
         flex-direction: column;
