--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ li{
     .image1{
         width: 2.5vw;
         display: inline-block;
+        padding-left: 20%;
     }
     li{
         display: none;
@@ -66,7 +67,7 @@ li{
     .header-div{
         display: flex;
         width: 10%;
-        margin-right: 1.2%;
+        margin-right: 5.5%;
      }
      .pic3{
         width: 5%;
@@ -87,6 +88,7 @@ li{
     .image1{
         width: 5vw;
         display: inline-block;
+        padding-left: 30%;
     }
     li{
         display: none;
@@ -94,7 +96,7 @@ li{
     .header-div{
         display: flex;
         width: 15.8%;
-        margin-right: 5%;
+        margin-right: 20%;
      }
      .pic3{
         width: 10%;
